# zero2production_for_axum

./: Cargo.toml
migrations/: 20220810174807_create_subscriptions_table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs
tests/: health_check.rs
