[package]
name = "zero2production_for_axum"
authors = ["acfuns <1haolong.sun@gmail.com>"]
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.5.15"
hyper = { version = "0.14.20", features = ["full"] }
serde = { version = "1.0.139", features = ["derive"] }
tokio = { version = "1.20.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["trace", "request-id"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter", "local-time", "json"] }

[dev-dependencies]
